style.css
*{
  box-sizing: border-box;
}

body{
  margin: 0;
  padding: 0;
  height: 100vh;
  width: 100vw;
  overflow: hidden;
  display: grid;
  grid: auto auto auto auto/ 33% 33% 33%;
}

h1{
  grid-row: 1/2;
  grid-column: 1/4;
  width: 100vw;
  font-size: 4vh;
  text-align: center;
}

.buttonContainer{
  grid-row: 2/3;
  grid-column: 1/4;
  height: auto;
  width: 100%;
  display: flex;
  justify-content: space-around;
}

.button{
  font-size: 4vh;
  height: 4vh;
  width: 26vw;
  text-decoration: none;
  text-align: center;
}

@media only screen and (orientation: portrait) {
  .button{
    font-size: 3vh;
    width: 35vw;
  }

}

.formContainer{
  grid-row: 3/4;
  grid-column: 1/4;
  display: flex;
  flex-direction: row;
  padding-left: 12vw;
}

@media only screen and (orientation: landscape){
  .formContainer{
    padding-left: 20vw;
  }

}

  .formInput{
    height: 5vh;
    width: 55vw;
    font-size: 2vh;
    border: 1px solid black;
}

.searchBtn{
  height: 2vh;
  font-size: 4vh;
  margin-left: 10px;
}

.container{
  grid-row: 4/5;
  grid-column: 1/4;
  margin-left: 5vw;
  height: 60vh;
  width: 90vw;
  border: 1px solid black;
  overflow-y: scroll;
}

.wrapper{
  height: auto;
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.pageLink{
  border: 1px solid blue;
  margin-top: 10px;
  text-decoration: none;
  font-size: 25px;
}

.page{
  display: flex;
  flex-direction: row;
  background-repeat: no-repeat;
}

.picImage{
  width: 600px;
  background-repeat: no-repeat;
  background-size: contain;
}


.content{
  list-style-type: none;
  background: transparent;
}

.content2{
  list-style-type: none;
  background: transparent;
  position: relative;
  left: 80px;
  width: 85%;
}

.summary{
  padding-right: 5px;
}

.disambiguation{
  font-weight: bold;
  font-size: 30px;
}

